improved UI, but no backend functionality for now

--- a/package.json
+++ b/package.json
@@ -9,13 +9,20 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@date-io/date-fns": "^3.0.0",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^5.16.5",
+    "@mui/lab": "^5.0.0-alpha.173",
     "@mui/material": "^5.16.5",
+    "@mui/x-data-grid": "^7.11.1",
+    "@mui/x-date-pickers": "^7.11.1",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "^18",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18"
   },
   "devDependencies": {
