--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "next": "14.2.5",
     "react": "^18",
     "react-datepicker": "^7.3.0",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
