--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.16.5",
     "@mui/x-data-grid": "^7.11.1",
     "@mui/x-date-pickers": "^7.11.1",
+    "@vercel/analytics": "^1.3.1",
     "date-fns": "^3.6.0",
     "dayjs": "^1.11.12",
     "firebase": "^10.12.4",
