--- a/package.json
+++ b/package.json
@@ -22,9 +22,12 @@
     "dayjs": "^1.11.12",
     "firebase": "^10.12.4",
     "next": "14.2.5",
+    "openai": "^4.54.0",
     "react": "^18",
     "react-datepicker": "^7.3.0",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
